--- a/translations/kangyur/translations/055-005_toh131-absorption_of_the_thus-gone_ones_wisdom_seal.xml
+++ b/translations/kangyur/translations/055-005_toh131-absorption_of_the_thus-gone_ones_wisdom_seal.xml
@@ -12,7 +12,7 @@
                     Seal</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs pa’i ye shes kyi
                     phyag rgya’i ting nge ’dzin ces bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo"/>
+              <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་ཡེ་ཤེས་ཀྱི་ཕྱག་རྒྱའི་ཏིང་ངེ་འཛིན་ཅེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­jñāna­mudrā­samādhi­nāma­mahā­yāna­sūtra</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Absorption
                     of the Thus-Gone One’s Wisdom Seal”</title>
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">Dr. John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.5.17 <date>2022</date>
+                <edition>v 1.5.20 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-25T15:39:44.38Z" user="admin">25/07/2022 15:39:44</note>
+                <note type="lastUpdated" date-time="2023-03-13T18:45:41.309Z" user="admin">13/03/2023 18:45:41</note>
             <note type="updated" update="text-version" value="v 1.01" date-time="2019-04-11T17:36:21.851Z" user="andre">v 1.01 2018</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-11T17:36:21.851Z" user="andre">2</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-04-12T09:09:49.721Z" user="andre">2.a</note>
@@ -98,7 +98,7 @@
     <note type="updated" update="text-version" value="1.5.12" date-time="2021-04-09T21:33:33.075Z" user="mike">fixed content around bimbisara's queen and daughter</note>
     <note type="updated" update="text-version" value="1.5.13" date-time="2021-04-22T14:13:33.754Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
     <note type="updated" update="text-version" value="1.5.14" date-time="2021-07-22T00:01:23.91Z" user="celso">kiṃnara to kinnara</note>
-    <note type="updated" update="text-version" value="1.5.15" date-time="2021-08-01T08:22:11.767Z" user="andre">Typo fixed in glossary</note>    <note type="updated" update="text-version" value="1.5.16" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.5.17" date-time="2022-07-25T15:39:40.438Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.5.15" date-time="2021-08-01T08:22:11.767Z" user="andre">Typo fixed in glossary</note>    <note type="updated" update="text-version" value="1.5.16" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.5.17" date-time="2022-07-25T15:39:40.438Z" user="martina-cotter">Added pending links.</note>    <note type="updated" update="text-version" value="1.5.18" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.5.19" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.5.20" date-time="2023-03-13T18:45:38.348Z" user="celso">"semi-divine" to "semidivine"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2473,7 +2473,7 @@
                             <term xml:lang="Bo-Ltn">dri za </term>
                             <term xml:lang="bo">དྲི་ཟ།</term>
                             <term xml:lang="Sa-Ltn">gandharva</term>
-                            <term type="definition">A class of semi-divine beings 
+                            <term type="definition">A class of semidivine beings 
                                 known for their skills as musicians, sometimes said to inhabit
                                 fantastic cities in the clouds but more usually on the slopes of Mount Meru.</term>
                         </gloss>
@@ -2515,7 +2515,7 @@
                             <term xml:lang="Bo-Ltn">mi’am ci </term>
                             <term xml:lang="bo">མིའམ་ཅི།</term>
                             <term xml:lang="Sa-Ltn">kinnara</term>
-                            <term type="definition">Semi-divine beings with a human body and the head
+                            <term type="definition">Semidivine beings with a human body and the head
                                 of a horse.</term>
                         </gloss>
                     </item>
@@ -3111,16 +3111,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-055-005-375">
-                            <term>Veṇuvana </term>
-                            <term xml:lang="Bo-Ltn">’od ma’i tshal </term>
+                        <gloss xml:id="UT22084-055-005-375" type="place" mode="match">
+                            <term>Veṇuvana</term>
+                            <term xml:lang="Bo-Ltn">’od ma’i tshal</term>
                             <term xml:lang="bo">འོད་མའི་ཚལ།</term>
-                            <term xml:lang="Sa-Ltn">Veṇuvana </term>
-                            <term type="definition">The famous bamboo grove near Rājagṛha where the
-                                Buddha regularly stayed and gave teachings. It was situated on land
-                                donated by King Bimbisāra of Magadha, the first of
-                                several landholdings donated to the Buddhist comunity during the
-                                time of the Buddha.</term>
+                            <term xml:lang="Sa-Ltn">Veṇuvana</term>
+                            <term type="definition">The famous bamboo grove near Rājagṛha where the Buddha regularly stayed and gave teachings. It was situated on land donated by King Bimbisāra of Magadha, the first of several landholdings donated to the Buddhist community during the time of the Buddha.</term>
                         </gloss>
                     </item>
                     <item>
