--- a/translations/kangyur/placeholders/079-019_toh392-the_secret_tantra_of_gnosis.xml
+++ b/translations/kangyur/placeholders/079-019_toh392-the_secret_tantra_of_gnosis.xml
@@ -10,23 +10,27 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal ye shes gsang ba'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrījñānaguhyatantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-079-019"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh392" type="text">
                     <ref>Toh 392</ref>
                     <biblScope>vol.79, ff.219r-220r(pp.347-439)</biblScope>
-                    <location count-pages="3">
-                        <start volume="79" page="439"/>
-                        <end volume="79" page="441"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="79" start-page="437" end-page="439"/>
                     </location>
                     <idno parent-id="O1JC114941JC21412" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12093" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:27:30 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-14T08:41:46.591Z" user="admin">14/03/2023 08:41:46</note>    <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:41:42.29Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:41:42.29Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
