--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -6,23 +6,27 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byams pas dam bcas pa'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">maitreyapratijñādhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of the Promise Made by Maitreya</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Promise Made by Maitreya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreyapratijñānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pas dam bcas pa zhes bya ba'i gzungs</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreyapratijñānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="en">[Note: Degé has maitreyapratijñādhāraṇī]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-091-040"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh643" type="text">
                     <ref>Toh 643</ref>
                     <biblScope>vol.91, ff.127v-128r(pp.254-255)</biblScope>
-                    <location count-pages="2">
-                        <start volume="91" page="256"/>
-                        <end volume="91" page="257"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="91" start-page="254" end-page="255"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12377" work="W22084"/>
@@ -30,16 +34,15 @@
                 <bibl key="toh890" type="text">
                     <ref>Toh 890</ref>
                     <biblScope>vol.100, ff.165v-166r(pp.330-331)</biblScope>
-                    <location count-pages="2">
-                        <start volume="100" page="332"/>
-                        <end volume="100" page="333"/>
+                    <location work="UT4CZ5369" count-pages="2">
+                        <volume number="100" start-page="330" end-page="331"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12652" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:29 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-14T08:45:03.306Z" user="admin">14/03/2023 08:45:03</note>    <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:44:58.999Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:44:58.999Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
