--- a/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-010_toh761-the_incantation_of_lohatunda.xml
@@ -6,27 +6,31 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lcags mchu'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">lohatuṇḍadhāraṇī</title>
-                <title type="mainTitle" xml:lang="en">The Incantation of Lohatuṇḍa</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Lohatuṇḍa</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lcags mchu zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryalohatuṇḍanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-096-010"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh761" type="text">
                     <ref>Toh 761</ref>
                     <biblScope>vol.96, ff.52r-53r(pp.103-105)</biblScope>
-                    <location count-pages="3">
-                        <start volume="96" page="105"/>
-                        <end volume="96" page="107"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="96" start-page="103" end-page="105"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12507" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:31:05 by admin</note>
+                <note type="lastUpdated" date-time="2023-03-14T08:48:34.796Z" user="admin">14/03/2023 08:48:34</note>    <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:48:30.505Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:48:30.505Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
