--- a/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -21,10 +21,10 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2021</date>
+                <edition>v 0.0.15 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-034-007"/>
                 <date/>
             </publicationStmt>
@@ -49,7 +49,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-10T08:28:11.226Z" user="admin">10/03/2023 08:28:11</note>
+                <note type="lastUpdated" date-time="2023-03-14T12:55:25.429Z" user="admin">14/03/2023 12:55:25</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
@@ -71,6 +71,8 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-11-29T10:14:45.8Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-01-27T14:32:06.778Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-03-10T08:28:05.555Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-03-14T12:55:21.115Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-03-14T12:55:21.115Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
