--- a/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/placeholders/071-011_toh297-the_sutra_of_many_domains.xml
@@ -19,10 +19,10 @@
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2020</date>
+                <edition>v 0.0.14 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-071-011"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-06T15:00:00.417Z" user="admin">06/03/2023 15:00:00</note>
+                <note type="lastUpdated" date-time="2023-03-14T14:59:08.174Z" user="admin">14/03/2023 14:59:08</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-27T09:49:23.533Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-02-27T09:49:23.533Z" user="andreas">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-07-06T07:58:14.619Z" user="line-tofte">0.0.1</note>
@@ -56,6 +56,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T14:59:26.076Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:59:26.076Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-03-06T14:59:54.564Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-14T14:59:03.773Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-03-14T14:59:03.773Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
