--- a/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
+++ b/translations/kangyur/translations/089-003_toh546,893-the_incantation_the_curse_of_manjusri.xml
@@ -40,16 +40,16 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
-                        </editionStmt>
-                        <publicationStmt status="2.a">
-                                <publisher>
+            </editionStmt>
+                        <publicationStmt status="2">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -61,12 +61,12 @@
                                                   details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-089-003"/>
-                                <note>An early mistake in the assigning of UT numbers within the
+                <idno xml:id="UT22084-089-003"/>
+                <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-03-07</date>
-                        </publicationStmt>
+                <date>2023-03-07</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh546" type="text">
                                         <ref>Toh 546</ref>
@@ -90,7 +90,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-03-10T16:03:37.089Z" user="martina-cotter">10/03/2023 16:03:37</note>
+                                <note type="lastUpdated" date-time="2023-03-15T09:35:23.741Z" user="admin">15/03/2023 09:35:23</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">3</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:27:42.342Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:28:05.921Z" user="line-tofte">Auto
@@ -121,6 +121,8 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:18:14.478Z" user="line-tofte">Auto
                                         (update-contributors)</note>
+                            <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:35:19.549Z" user="line-tofte">2</note>
+                            <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:35:19.549Z" user="line-tofte">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
