--- a/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
@@ -28,10 +28,10 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.a">
+            <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-13T06:22:03.984Z" user="martina-cotter">13/03/2023 06:22:03</note>
+                <note type="lastUpdated" date-time="2023-03-15T09:36:33.292Z" user="admin">15/03/2023 09:36:33</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:29:50.789Z" user="line-tofte">Auto
@@ -94,6 +94,8 @@
                     (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:22:21.322Z" user="line-tofte">Auto
                     (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:36:29.094Z" user="line-tofte">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:36:29.094Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
