--- a/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
+++ b/translations/kangyur/translations/089-006_toh549,895-the_incantation_manjusris_increasing_of_insight_and_intelligence.xml
@@ -32,10 +32,10 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.a">
+            <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                     is a global non-profit initiative to translate all the
@@ -80,7 +80,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-13T06:22:38.513Z" user="martina-cotter">13/03/2023 06:22:38</note>
+                <note type="lastUpdated" date-time="2023-03-15T09:38:00.221Z" user="admin">15/03/2023 09:38:00</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:38:06.845Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:38:28.251Z" user="line-tofte">Auto (update-contributors)</note>
@@ -100,6 +100,8 @@
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-03-06T14:25:09.654Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-03-06T14:25:09.654Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:25:45.778Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:37:56.009Z" user="line-tofte">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:37:56.009Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
