--- a/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -30,10 +30,10 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.a">
+            <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -76,7 +76,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-13T06:22:33.221Z" user="martina-cotter">13/03/2023 06:22:33</note>
+                <note type="lastUpdated" date-time="2023-03-15T09:38:48.658Z" user="admin">15/03/2023 09:38:48</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto
@@ -107,6 +107,8 @@
                     (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2023-03-06T14:30:49.885Z" user="line-tofte">Auto
                     (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:38:44.465Z" user="line-tofte">2</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:38:44.465Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -296,14 +298,6 @@
             <div type="glossary" status="excluded">
                 <list type="glossary">
                     <item>
-                        <gloss type="term" xml:id="UT22084-089-007-32">
-                            <term>Three Jewels</term>
-                            <term xml:lang="Bo-Ltn" status="verified">dkon mchog gsum </term>
-                            <term xml:lang="bo">དཀོན་མཆོག་གསུམ།</term>
-                            <term xml:lang="Sa-Ltn" status="verified">ratnatraya</term>
-                        </gloss>
-                    </item>
-                    <item>
                         <gloss type="term" xml:id="UT22084-089-007-33">
                             <term>tathāgata</term>
                             <term xml:lang="Bo-Ltn" status="verified">de bzhin gshegs pa </term>
@@ -332,7 +326,6 @@
                                 aloud or mentally in order to bring about a magical or
                                 soteriological effect or result. The term has been creatively
                                 etymologized to mean “that which protects (<foreign xml:lang="Sa-Ltn" type="term">tra</foreign>) the mind (<foreign xml:lang="Sa-Ltn" type="term">man</foreign>).”</term>
-                        <term type="alternative">consecrated…with mantra</term>
                         </gloss>
                     </item>
                     <item>
