--- a/translations/kangyur/translations/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
+++ b/translations/kangyur/translations/089-008_toh551-in_praise_of_the_acuity_of_manjusri.xml
@@ -27,15 +27,15 @@
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-        <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
-      </editionStmt>
-      <publicationStmt status="2.a">
-        <publisher>
+            </editionStmt>
+      <publicationStmt status="2">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability>
+                <availability>
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -44,11 +44,11 @@
               or personal compensation. For full details, see the Creative Commons license.</p>
           </licence>
         </availability>
-        <idno xml:id="UT22084-089-008"/>
-        <note>An early mistake in the assigning of UT numbers within the 84000 project means that
+                <idno xml:id="UT22084-089-008"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2023-03-08</date>
-      </publicationStmt>
+                <date>2023-03-08</date>
+            </publicationStmt>
       <sourceDesc>
         <bibl key="toh551" type="text">
           <ref>Toh 551</ref>
@@ -61,7 +61,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-03-13T18:11:53.266Z" user="martina-cotter">13/03/2023 18:11:53</note>
+        <note type="lastUpdated" date-time="2023-03-15T09:39:49.87Z" user="admin">15/03/2023 09:39:49</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:41:27.745Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:41:51.022Z" user="line-tofte">Auto (update-contributors)</note>
@@ -93,6 +93,8 @@
         <note type="updated" update="text-version" value="0.0.14" date-time="2023-03-06T14:32:05.593Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.15" date-time="2023-03-06T14:32:33.56Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:39:45.664Z" user="line-tofte">2</note>
+          <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:39:45.664Z" user="line-tofte">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
