--- a/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -24,11 +24,11 @@
                 <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2019</date>
+                <edition>v 0.1.11 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-050-003"/>
                 <date/>
             </publicationStmt>
@@ -44,7 +44,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-30T11:01:02.195Z" user="admin">30/08/2022 11:01:02</note>
+                <note type="lastUpdated" date-time="2023-03-15T14:37:54.302Z" user="admin">15/03/2023 14:37:54</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,6 +57,8 @@
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-06-15T12:56:27.388Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-07-26T04:27:23.723Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-08-30T11:00:52.939Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-03-15T14:37:50.045Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.1.11" date-time="2023-03-15T14:37:50.045Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
