--- a/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/placeholders/066-008_toh250-the_sutra_on_four_points.xml
@@ -12,10 +12,10 @@
                 <author role="translatorEng" ref="contributors.xml#person-258">Adam Pearcey</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-066-008"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-28T08:53:11.557Z" user="admin">28/01/2022 08:53:11</note>
+                <note type="lastUpdated" date-time="2023-03-15T15:51:24.429Z" user="admin">15/03/2023 15:51:24</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:57:37.013Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:57:53.875Z" user="line-tofte">Auto (update-contributors)</note>
@@ -39,6 +39,8 @@
     <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">2.h</note>
 
     <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T08:53:04.024Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">2.g</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:51:20.171Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
