--- a/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/placeholders/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="contributors.xml#person-258">Adam Pearcey</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-066-009"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-28T09:12:39.923Z" user="admin">28/01/2022 09:12:39</note>
+                <note type="lastUpdated" date-time="2023-03-15T15:52:22.78Z" user="admin">15/03/2023 15:52:22</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-02-08T07:58:40.091Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-08T07:59:06.674Z" user="line-tofte">Auto (update-contributors)</note>
@@ -40,6 +40,8 @@
     <note type="updated" update="translation-status" value="2.h" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">2.h</note>
 
     <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-28T09:12:32.464Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">2.g</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T15:52:18.545Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
