--- a/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/placeholders/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -11,10 +11,10 @@
                 <author role="translatorEng" ref="eft:person-258">Adam Pearcey</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT23703-113-010"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-03T10:20:23.434Z" user="admin">03/09/2022 10:20:23</note>
+                <note type="lastUpdated" date-time="2023-03-15T15:53:17.972Z" user="admin">15/03/2023 15:53:17</note>
                 <note type="title" date-time="2022-01-14T11:45:17.141Z" user="john">The Tōhoku catalogue conflates this text with the following one.</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-01-28T08:36:55.219Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-02-10T12:19:53.452Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-10T12:20:12.73Z" user="line-tofte">0.0.5</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-03T10:19:05.33Z" user="andre">Auto (entity-merge-attribution)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-15T15:53:13.75Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-15T15:53:13.75Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
