--- a/translations/kangyur/translations/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090-in_praise_of_the_mistress_of_disease.xml
@@ -27,14 +27,14 @@
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-        <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
-      </editionStmt>
-      <publicationStmt status="2.a">
-        <publisher>
+            </editionStmt>
+      <publicationStmt status="2">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into modern
           languages, and to make them available to everyone. </publisher>
-        <availability>
+                <availability>
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that according to Vajrayāna Buddhist tradition there are
             restrictions and commitments concerning tantra. Practitioners who are not sure if they should read this translation are advised to consult the
@@ -47,10 +47,10 @@
               details, see the Creative Commons license.</p>
           </licence>
         </availability>
-        <idno xml:id="UT22084-101-146"/>
-        <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard logic.</note>
-        <date>2023-02-24</date>
-      </publicationStmt>
+                <idno xml:id="UT22084-101-146"/>
+                <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard logic.</note>
+                <date>2023-02-24</date>
+            </publicationStmt>
       <sourceDesc>
         <bibl key="toh1090" type="text">
           <ref>Toh 1090</ref>
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-03-01T13:38:55.911Z" user="martina-cotter">01/03/2023 13:38:55</note>
+        <note type="lastUpdated" date-time="2023-03-15T16:02:26.246Z" user="admin">15/03/2023 16:02:26</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T08:01:52.252Z" user="line-tofte">Auto (update-contributors)</note>
@@ -96,6 +96,8 @@
         <note type="updated" update="text-version" value="0.0.13" date-time="2023-02-22T15:04:53.844Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.14" date-time="2023-02-22T15:05:24.279Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="text-version" value="0.0.15" date-time="2023-02-24T13:16:32.129Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="translation-status" value="2" date-time="2023-03-15T16:02:21.978Z" user="line-tofte">2</note>
+          <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T16:02:21.978Z" user="line-tofte">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -239,7 +241,7 @@
                         </l>
             <l>As you ring your terrifying bell, you subdue all that moves, </l>
             <l>And clear and pacify<note place="end" xml:id="UT22084-101-146-151"> Following Toh 1090 <foreign xml:lang="Bo-Ltn" type="quote">’jigs sel zhi
-                  la</foreign> and the Peking and Narthang recensions of Toh 1777<foreign xml:lang="Bo-Ltn" type="quote">’jigs pa gsal zhing zhi
+                  la</foreign> and the Peking and Narthang recensions of Toh 1777 <foreign xml:lang="Bo-Ltn" type="quote">’jigs pa gsal zhing zhi
                 la</foreign>—both lending the meaning “clear fears and pacify”—rather than the Degé edition of Toh 1777 <foreign xml:lang="Bo-Ltn" type="quote">’jigs pa bsal zhing</foreign> (“clear fears and”).</note> the fear of illness and death.<note place="end" xml:id="UT22084-101-146-152">
                 Following Toh 1090 <foreign xml:lang="Bo-Ltn" type="quote">nad dang ’chi ba</foreign> (“illness and death”), rather than Toh 1777 <foreign xml:lang="Bo-Ltn" type="quote">nad chen ’chi ba</foreign> (“the great illness that is death”).</note> |2|</l>
           </lg>
@@ -342,7 +344,7 @@
                 colophon. </note> |8|</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-101-146-101"/>
-          <trailer key="toh1090" tid="84">This concludes “<title xml:lang="en">Praising the Lady Who Rules Disease</title>.”</trailer>
+          <trailer key="toh1090" tid="84">This concludes “<title xml:lang="en">Praising the Lady Who Rules Disease</title>”, composed by the Brahmin Vararuci.</trailer>
           <!--<trailer key="toh1777" tid="84">This concludes “<title xml:lang="en">Eight Verses Praising the
                                                   Glorious</title><note place="end" xml:id="UT22084-101-146-102"> The word <foreign xml:lang="Bo-Ltn" type="term">dpal</foreign>
                                                   (“glorious”) is present in Toh 1777 but absent in
@@ -350,13 +352,8 @@
                                                   Goddess Mahākālī,
                                                   the Lady Who Rules
                                                   All
-                                                  Disease</title>.”</trailer>
+                                                  Disease</title>”, composed by the Brahmin Vararuci.</trailer>
 -->
-        </div>
-        <div type="colophon" xml:id="UT22084-101-146-colophon">
-          <head type="colophon" tid="85">Colophon</head>
-          <milestone unit="chunk" xml:id="UT22084-101-146-104"/>
-          <p tid="86">Composed by the Brahmin Vararuci.</p>
         </div>
       </div>
     </body>
