--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -21,11 +21,11 @@
                 <sponsor ref="sponsors.xml#sponsor-7">Leo Tong Chen and his family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-039-003"/>
                 <date/>
             </publicationStmt>
@@ -41,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-09T09:04:22.058Z" user="admin">09/08/2022 09:04:22</note>
+                <note type="lastUpdated" date-time="2023-03-17T09:18:21.499Z" user="admin">17/03/2023 09:18:21</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:57:01.899Z" user="cabie-sim">Auto (update-titles)</note>
@@ -49,6 +49,8 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-09T09:02:49.463Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-09T09:03:33.081Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-09T09:04:14.061Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:18:17.251Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-17T09:18:17.251Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
