--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-071-002"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:49:49.576Z" user="admin">15/07/2022 14:49:49</note>
+                <note type="lastUpdated" date-time="2023-03-17T09:24:50.34Z" user="admin">17/03/2023 09:24:50</note>
                 <note type="updated" update="text-version" value="" date-time="2019-04-29T17:15:40.869Z" user="john"/>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-11T09:35:06.396Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-02-11T09:35:06.396Z" user="andreas">2.h</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-15T14:49:07.006Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:49:47.544Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:24:46.106Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-17T09:24:46.106Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
