--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-090-008"/>
                 <date/>
             </publicationStmt>
@@ -45,7 +45,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:44:09.05Z" user="admin">15/07/2022 14:44:09</note>
+                <note type="lastUpdated" date-time="2023-03-17T09:57:02.592Z" user="admin">17/03/2023 09:57:02</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:18:23.639Z" user="line-tofte">Auto (update-contributors)</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-15T14:44:06.979Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:56:58.357Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-17T09:56:58.357Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
