--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-090-009"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:45:39.235Z" user="admin">15/07/2022 14:45:39</note>
+                <note type="lastUpdated" date-time="2023-03-17T09:58:03.862Z" user="admin">17/03/2023 09:58:03</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:24:24.546Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:45:37.176Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:57:59.603Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-17T09:57:59.603Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
