--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -15,11 +15,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.6 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-090-010"/>
                 <date/>
             </publicationStmt>
@@ -35,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T14:47:09.129Z" user="admin">15/07/2022 14:47:09</note>
+                <note type="lastUpdated" date-time="2023-03-17T09:58:58.635Z" user="admin">17/03/2023 09:58:58</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:27.385Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T16:08:54.101Z" user="line-tofte">Auto (update-contributors)</note>
@@ -43,6 +43,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:46:22.206Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:47:07.082Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:58:54.37Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-17T09:58:54.37Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
