--- a/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -14,10 +14,10 @@
                 <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-072-030"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-06T13:47:19.539Z" user="admin">06/03/2023 13:47:19</note>
+                <note type="lastUpdated" date-time="2023-03-21T10:21:32.444Z" user="admin">21/03/2023 10:21:32</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:27:11.559Z" user="line-tofte">Auto (update-contributors)</note>
@@ -44,6 +44,8 @@
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-06T13:46:24.047Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-06T13:47:13.661Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-21T10:21:28.263Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-21T10:21:28.263Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
